--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <script>
     const imageFiles = [
-      "c93a.png", "c93.png", "c92.png", "c91.png", "c90.png", "c89.png", "c88.png", "c87.png", "c86.png", "c85.png", "c84.png", "c83.png", "c82.png", "c81.png", "c80.png", "c79.png", "c78.png", "c77.png", "c76.png", "c75.png", "c74.png", "c73.png", "c72.png", "c71.png", "c70.png", "c69.png", "c68.png", "c67.png", "c66.png", "c64.png", "c63.png", "c61.png", "c60.png", "c59.png", "c58.png", "c57.png", "c56.png", "c55.png", "c54.png", "c53.png", "c52.png", "c50.png", "c48.png", "c47.png", "c46.png", "c45.png", "c44.png", "c43.png", "c42.png", "c40.png", "c39.png"
+      "c94.png", "c93a.png", "c93.png", "c92.png", "c91.png", "c90.png", "c89.png", "c88.png", "c87.png", "c86.png", "c85.png", "c84.png", "c83.png", "c82.png", "c81.png", "c80.png", "c79.png", "c78.png", "c77.png", "c76.png", "c75.png", "c74.png", "c73.png", "c72.png", "c71.png", "c70.png", "c69.png", "c68.png", "c67.png", "c66.png", "c64.png", "c63.png", "c61.png", "c60.png", "c59.png", "c58.png", "c57.png", "c56.png", "c55.png", "c54.png", "c53.png", "c52.png", "c50.png", "c48.png", "c47.png", "c46.png", "c45.png", "c44.png", "c43.png", "c42.png", "c40.png", "c39.png"
     ];
 
     const gallery = document.getElementById('gallery');
